# radarmap

./: .gitignore  404.html  LICENSE  README.md  benchmark_results.csv  index.html  mkdocs.yml  package.json  pyproject.toml  run_benchmarks.py
.github/workflows/: ci.yml  deploy-docs.yml
architecture/: index.html
architecture_diagram/: index.html
benchmarks/: gpu_transfer.py  run_benchmarks.py
docs/: architecture.md  architecture_diagram.md  index.md  performance.md  rendering.md  telemetry.md
performance/: index.html
radarmap-backend/: pyproject.toml
radarmap-backend/app/: __init__.py  config.py  logger.py  main.py  metrics.py  parser.py  tiles.py
radarmap-backend/app/renderers/: __init__.py  base.py  cpu.py  cuda.py
radarmap-backend/app/schemas/: models.py
radarmap-backend/app/services/: dwd_service.py
radarmap-backend/tests/: test_parser.py  test_tiles.py
radarmap-frontend/: index.html  package-lock.json  package.json
radarmap-frontend/src/: App.tsx  Legend.tsx  TimeDisplay.tsx  index.css  styles.css
rendering/: index.html
search/: search_index.json
telemetry/: index.html
